syntax = "proto3";

package user_grpc;

option go_package = ".;user_grpc";

message User {
  int32 user_id = 1;
  string user_name = 2;
  string password = 3;
  string email = 4;
}

// レスポンスのステータス
message ResponseStatus{
  string code =1;
}

message CreateUserRequest {
  User user=1;
}

message CreateUserResponse {
  User user=1;
  ResponseStatus status=2;
}

message ReadUserRequest {
  int32  user_id=1;
}

message ReadUserResponse {
  User user=1;
}

message UpdateUserRequest {
  User user=1;
}

message UpdateUserResponse {
  User user=1;
}

message DeleteUserRequest {
  int32 user_id=1;
}

message DeleteUserResponse {
  User user=1;
}

message ListUserRequest {
}

message ListUserResponse {
  User user=1;
}

message LoginRequest {
  string email=1;
  string password=2;
}

message LoginResponse {
  string token=1;
  string email=2;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc ReadUser(ReadUserRequest) returns (ReadUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUser(ListUserRequest) returns (stream ListUserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}
